--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ nav {
 h2 {
 	text-align: center;
 	text-transform: uppercase;
-	font-size: 32px;
+	font-size: 3.2rem;
 }
 
 .underline {
@@ -73,7 +73,7 @@ h2 {
 
 .aboutus i {
 	margin-top: 20px;
-	font-size: 30px;
+	font-size: 3rem;
 }
 
 .aboutus-card-title {
@@ -82,7 +82,7 @@ h2 {
 }
 
 .aboutus-card-text {
-	font-size: 14px;
+	font-size: 1.4rem;
 }
 
 .aboutus-hover:hover {
@@ -105,7 +105,9 @@ h2 {
 	background-color: rgba(0, 0, 0, 0.6);
 	z-index: -5;
 }
-.card img {
+
+
+.card .card-img-top {
 	height: 400px;
 	object-fit: cover;
 }
@@ -150,7 +152,7 @@ h2 {
 
 
 footer {
-	font-size: 20px;
+	font-size: 2rem;
 }
 
 .icon-box {
